Fix brand alignment

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -354,8 +354,13 @@ nav .brand #logo1 {
     .seperator2 .card-fluid {
         margin-bottom: 50px;
     }
+    .brand {
+        display: none;
+    }
   }
-  
+.brand-active {
+    display: inline-block;
+}
   
 .status-btn {
     display: grid;
